Validation module - fixes to get it to install and work (via logging messages to log console) in 2.x